Feat : get user profile info #17
Signed-off-by: bentshrimp <bent_shrimp@kookmin.ac.kr>

--- a/src/mainpage.css
+++ b/src/mainpage.css
@@ -1,4 +1,4 @@
-.welcome{
+.WELCOME{
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -23,11 +23,11 @@ Button{
     padding: 20px;
 }
 
-.desc{
+.DESC{
     padding: 30px;
 }
 
-.steps{
+.STEPS{
     background-color: #B0A8B9;
 }
 
