Add: add IBM font file #126

--- a/src/index.css
+++ b/src/index.css
@@ -11,3 +11,18 @@ code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
 }
+
+@font-face {
+  font-family: "IBM Medium";
+  src: url(./assets/fonts/IBM_Plex_Sans_KR/IBMPlexSansKR-Medium.ttf);
+}
+
+@font-face {
+  font-family: "IBM Light";
+  src: url(./assets/fonts/IBM_Plex_Sans_KR/IBMPlexSansKR-Light.ttf);
+}
+
+:root {
+	--font-IBM: "IBM Medium";
+  --font-IBM-light: "IBM Light";
+}
